<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_green"
    android:orientation="vertical">
<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/ticket_bitmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/menu_button"
        android:layout_marginTop="10dp" />

    <ToggleButton
        android:id="@+id/favouriteButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@android:drawable/btn_star"
        android:checked="false"
        android:textOff=""
        android:textOn="" />
</FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_grey"
        android:padding="20dp"
        android:layout_marginTop="0dp"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/dark_grey"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_toLeftOf="@+id/colon"
                android:textColor="@color/dart_cream"
                android:text="@string/status"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/dart_cream"
                android:text="&#160;:&#160;"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="right"
                android:layout_toEndOf="@+id/colon"
                android:text="Sent"
                android:textColor="@color/light_green"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/dark_grey"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/origin_station_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_toLeftOf="@+id/colon1"
                android:textColor="@color/dart_cream"
                android:text="@string/origin_station_name"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/colon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/dart_cream"
                android:text="&#160;:&#160;"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/origin_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="right"
                android:layout_toEndOf="@+id/colon1"
                android:text="@string/origin_status"
                android:textColor="@color/switch_red"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/dark_grey"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dest_station_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_toLeftOf="@+id/colon2"
                android:textColor="@color/dart_cream"
                android:text="@string/dest_station_name"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/colon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:textColor="@color/dart_cream"
                android:text="&#160;:&#160;"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dest_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/colon2"
                android:text="@string/dest_status"
                android:textColor="@color/switch_red"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarBegin"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" />


</LinearLayout>
